<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/registration_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/registration_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:constraint_referenced_ids="first_name_label_tv"/>

    <TextView
        android:id="@+id/registration_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_tv"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/first_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_label_tv"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/registration_group"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_placeholder"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/first_name_label_tv"/>

    <TextView
        android:id="@+id/last_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_label_tv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/first_name_et"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_placeholder"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/last_name_label_tv"/>

    <TextView
        android:id="@+id/email_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label_tv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/last_name_et"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/email_label_tv"/>

    <TextView
        android:id="@+id/date_of_birth_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth_label_tv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth_label_tv"
        app:layout_constraintStart_toStartOf="parent">
        <Spinner
            android:id="@+id/spinner_day_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner_month_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_year_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<androidx.recyclerview.widget.RecyclerView
                android:id="@+id/year_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->
        </Spinner>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>